# kokkos-kernels

./: cm_generate_makefile.bash
cmake/: kokkoskernels_eti_floats.cmake
example/: CMakeLists.txt  issue1052-cuda-double.cpp  issue1052-cuda-single.cpp  issue1052.cpp
perf_test/blas/blas/: KokkosBlas_trtri_perf_test.hpp
perf_test/blas/blas3/: KokkosBlas3_common.hpp  KokkosBlas3_gemm_perf_test.hpp  KokkosBlas3_perf_test.cpp  KokkosBlas3_trmm_perf_test.hpp
scripts/: cm_test_all_sandia
src/batched/: KokkosBatched_Gemm_Serial_Impl.hpp  KokkosBatched_Gemm_Serial_Internal.hpp  KokkosBatched_Gemm_TeamVector_Internal.hpp  KokkosBatched_Gemm_Team_Internal.hpp  KokkosBatched_Gemv_Decl.hpp  KokkosBatched_Util.hpp
src/blas/impl/: KokkosBlas1_axpby_spec.hpp
src/impl/tpls/: KokkosBlas3_gemm_tpl_spec_decl.hpp
src/sparse/: KokkosSparse_CrsMatrix.hpp  KokkosSparse_spmv.hpp
unit_test/batched/: Test_Batched_SerialGemm.hpp
unit_test/blas/: Test_Blas1_dot.hpp
