KOKKOSKERNELS_INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
KOKKOSKERNELS_INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

KOKKOSKERNELS_INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../test_common)

KOKKOSKERNELS_INCLUDE_DIRECTORIES($ENV{CUDA_ROOT}/samples/common/inc/)

#ADD_SUBDIRECTORY(fenl)
#ADD_SUBDIRECTORY(graph)
ADD_SUBDIRECTORY(wiki)

KOKKOSKERNELS_ADD_EXECUTABLE_AND_TEST(
        issue1052
        SOURCES issue1052.cpp
)
